# actix-web-admin

./: Cargo.toml  README.md  env-simple
sql/: init-20200626.sql  init-20200628.sql
src/: main.rs
src/files/: handler.rs  mod.rs  model.rs  service.rs
src/home/: handler.rs  model.rs  service.rs
src/middlewares/: authorize.rs  filter.rs  mod.rs
src/user/: handler.rs  model.rs  service.rs
src/utils/: jwt.rs  mod.rs
static/: filelist.html  index.html
test/: dev.http
