[package]
name = "actix-web-admin"
version = "0.1.0"
authors = ["real_cpf <real_cpf@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listenfd = "0.3.3"
actix-multipart = "0.2.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-service = "1.0.5"
actix-cors = "0.2.0"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.3", features = [ "postgres" ,"chrono"] }
futures = "0.3.4"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
anyhow = "1.0.28"
jsonwebtoken = "7.1.0"
sanitize-filename = "0.2.1"
rand = "0.7.3"
